; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_xpt2046_init.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_xpt2046_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_cs_pin = common dso_local global i8* null, align 8
@_irq_pin = common dso_local global i8* null, align 8
@_height = common dso_local global i32 0, align 4
@_width = common dso_local global i32 0, align 4
@PLATFORM_GPIO_OUTPUT = common dso_local global i32 0, align 4
@PLATFORM_GPIO_FLOAT = common dso_local global i32 0, align 4
@CAL_MARGIN = common dso_local global i32 0, align 4
@ADC_MAX = common dso_local global i32 0, align 4
@PLATFORM_GPIO_LOW = common dso_local global i32 0, align 4
@CTRL_HI_Y = common dso_local global i32 0, align 4
@CTRL_LO_SER = common dso_local global i32 0, align 4
@PLATFORM_GPIO_HIGH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @xpt2046_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xpt2046_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i8* @luaL_checkinteger(i32* %3, i32 1)
  store i8* %4, i8** @_cs_pin, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @luaL_checkinteger(i32* %5, i32 2)
  store i8* %6, i8** @_irq_pin, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i8* @luaL_checkinteger(i32* %7, i32 3)
  %9 = ptrtoint i8* %8 to i32
  store i32 %9, i32* @_height, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i8* @luaL_checkinteger(i32* %10, i32 4)
  %12 = ptrtoint i8* %11 to i32
  store i32 %12, i32* @_width, align 4
  %13 = load i8*, i8** @_cs_pin, align 8
  %14 = load i32, i32* @PLATFORM_GPIO_OUTPUT, align 4
  %15 = load i32, i32* @PLATFORM_GPIO_FLOAT, align 4
  %16 = call i32 @platform_gpio_mode(i8* %13, i32 %14, i32 %15)
  %17 = load i32, i32* @CAL_MARGIN, align 4
  %18 = load i32, i32* @ADC_MAX, align 4
  %19 = mul nsw i32 %17, %18
  %20 = load i32, i32* @_width, align 4
  %21 = sdiv i32 %19, %20
  %22 = load i32, i32* @CAL_MARGIN, align 4
  %23 = load i32, i32* @ADC_MAX, align 4
  %24 = mul nsw i32 %22, %23
  %25 = load i32, i32* @_height, align 4
  %26 = sdiv i32 %24, %25
  %27 = load i32, i32* @_width, align 4
  %28 = load i32, i32* @CAL_MARGIN, align 4
  %29 = sub nsw i32 %27, %28
  %30 = load i32, i32* @ADC_MAX, align 4
  %31 = mul nsw i32 %29, %30
  %32 = load i32, i32* @_width, align 4
  %33 = sdiv i32 %31, %32
  %34 = load i32, i32* @_height, align 4
  %35 = load i32, i32* @CAL_MARGIN, align 4
  %36 = sub nsw i32 %34, %35
  %37 = load i32, i32* @ADC_MAX, align 4
  %38 = mul nsw i32 %36, %37
  %39 = load i32, i32* @_height, align 4
  %40 = sdiv i32 %38, %39
  %41 = call i32 @setCalibration(i32 %21, i32 %26, i32 %33, i32 %40)
  %42 = load i8*, i8** @_cs_pin, align 8
  %43 = load i32, i32* @PLATFORM_GPIO_LOW, align 4
  %44 = call i32 @platform_gpio_write(i8* %42, i32 %43)
  %45 = load i32, i32* @CTRL_HI_Y, align 4
  %46 = load i32, i32* @CTRL_LO_SER, align 4
  %47 = or i32 %45, %46
  %48 = call i32 @platform_spi_send_recv(i32 1, i32 8, i32 %47)
  %49 = call i32 @transfer16(i32 0)
  %50 = load i8*, i8** @_cs_pin, align 8
  %51 = load i32, i32* @PLATFORM_GPIO_HIGH, align 4
  %52 = call i32 @platform_gpio_write(i8* %50, i32 %51)
  ret i32 0
}

declare dso_local i8* @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @platform_gpio_mode(i8*, i32, i32) #1

declare dso_local i32 @setCalibration(i32, i32, i32, i32) #1

declare dso_local i32 @platform_gpio_write(i8*, i32) #1

declare dso_local i32 @platform_spi_send_recv(i32, i32, i32) #1

declare dso_local i32 @transfer16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
